# sentiment-analysis-assistant

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  sentiment_api.py  streamlit_app.py
src/: abbrev.py  api.py  config.py  historydb.py  restore_diacritics.py  streamlit.py
