[project]
name = "sentiment-analysis-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evaluate>=0.4.6",
    "streamlit>=1.51.0",
    "tokenizers>=0.22.1",
    "transformers>=4.57.1",
    "underthesea>=8.3.0",
    "torch>=2.9.1",
    "torchsummary>=1.5.1",
    "torchvision>=0.24.1",
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "python-dotenv>=1.2.1",
    "yaspin>=3.3.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "pandas>=2.3.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130" },
]
torchvision = [
    { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

